plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.multi.laptellect'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
	compileOnly {
		extendsFrom annotationProcessor
	}


}

repositories {
	mavenCentral()
	maven { url'https://jitpack.io' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


	implementation group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16' // log4j DB
	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.3.0' // thymeleaf-layout-dialect
	implementation 'org.springframework.data:spring-data-commons:3.3.1' // Pageable
	implementation 'com.google.code.gson:gson:2.8.9' // gson
	implementation 'org.springframework.boot:spring-boot-starter-mail' // smtp
	implementation 'org.springframework.boot:spring-boot-starter-aop' // aop

	
	implementation 'com.github.shin285:KOMORAN:3.3.9' // KOMORAN
	implementation 'org.jsoup:jsoup:1.18.1'// jsoup
	implementation 'org.seleniumhq.selenium:selenium-java:4.19.1'
	// Spark MLlib 의존성 추가
	compileOnly group: 'org.apache.spark', name: 'spark-mllib_2.13', version: '3.5.1' // spark mllib
	implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.9.1' // webdrivermanager

	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
	// https://mvnrepository.com/artifact/org.jsoup/jsoup



	implementation 'com.github.iamport:iamport-rest-client-java:0.2.14' //payment
	implementation 'org.springframework.session:spring-session-data-redis' // redis 세션 관리
	implementation 'net.nurigo:sdk:4.3.0' // coolsms

	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.180' // aws
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation("com.googlecode.json-simple:json-simple:1.1.1")


}
	




tasks.named('test') {
	useJUnitPlatform()
}
